--------------------------------------------------------------------------------


  Giada - Your Hardcore Loopmachine.

  Developed by Monocasual Laboratories

  www.giadamusic.com

  CHANGELOG
--------------------------------------------------------------------------------


0.16.1 --- 
- FreeBSD support
- Add namespaces to file system and logging functions 
- Gray out bpm value when in JACK client mode
- Remove unused G_quit global variable
- 'Reset to init state' becomes 'close project' under File menu
- [Linux] Upgrade Travis CI Linux machine to Xenial
- Fix Sample Channels in loop mode not playing automatically after audio 
  recording


0.16.0 --- 2019 . 12 . 02
- Fix columns' resizer bar height on verical window resize
- Fix crash on MIDI learn global commands
- Fix wrong channel routing when triggering MIDI learnt commands
- Fix rewind button not rewinding sample channels in LOOP_* mode 
- Use actual buffer size from KernelAudio when loading channels from a patch
- Remove FLTK multithreading initialization


0.16.0 beta-2 --- 2019 . 11 . 11
- Remove all pthread.h leftovers 
- Fix Windows build
- Fix memory corruption on Keyboard refresh
- Fix wave size corruption while editing samples in Sample Editor
- Fix freeze when cloning a Sample Channel with a sample in it
- Fix buffer overflow when playing an edited sample
- Fix crash when loading a project with missing plug-ins
- Fix freeze when pressing 'play' during an audio recording session
- Fix play/ending UI status of MIDI channels
- Fix plug-in sorting on reload
- Fix crash when reloading a sample in the Sample Editor
- Fix messy 'R' button status when toggled
- Fix missing icons and broken checkboxes
- Optimize model updates on keyboard interaction
- Always read Columns data from patch files
- Show missing (and removable) plug-ins in Plug-in Window list
- Create default empty columns on 'Reset to initial state'
- Save relative Wave paths in project files


0.16.0 beta-1 --- 2019 . 10 . 19