@@ -14,12 +14,14 @@
 0.16.1 --- 
 - FreeBSD support
 - Add namespaces to file system and logging functions 
+- Ability to remove empty columns manually
 - Gray out bpm value when in JACK client mode
 - Remove unused G_quit global variable
 - 'Reset to init state' becomes 'close project' under File menu
 - [Linux] Upgrade Travis CI Linux machine to Xenial
 - Fix Sample Channels in loop mode not playing automatically after audio 
   recording
+- Fix action recording button status during audio recording, signal mode
 
 
 0.16.0 --- 2019 . 12 . 02
